--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -14,7 +14,9 @@ repositories {
 }
 
 dependencies {
+
     implementation(project(":productadm"))
+    implementation(project(":shared"))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
