Nova entidade product mas de outro contexto

--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -15,8 +15,10 @@ repositories {
 
 dependencies {
 
-    implementation(project(":productadm"))
     implementation(project(":shared"))
+    implementation(project(":productadm"))
+    implementation(project(":storecatalog"))
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
